# wbt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_CN.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml  release-crate.yml  release.yml
crates/wbt-core/: Cargo.toml
crates/wbt-core/src/: backtest.rs  calc_symbol.rs  daily_performance.rs  errors.rs  evaluate_pairs.rs  lib.rs  native_engine.rs  report.rs  trade_dir.rs  utils.rs
docs/: desgin.md  release_check.md
docs/release_notes/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4-draft.md  v0.3.0-draft.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.4.0.md  v0.5.0.md
docs/superpowers/plans/: 2026-04-01-wbt-implementation.md  2026-05-17-czsc-functions-migration.md
docs/superpowers/specs/: 2026-04-01-wbt-standalone-library-design.md  2026-04-02-python-subproject-restructure-design.md  2026-04-02-unit-test-coverage-design.md
python/: README.md  README_CN.md  pyproject.toml
python/scripts/: compare_with_czsc_real_data.py  compare_yearly_return_with_vista.py  perf_compare_real_data.py  quick_start.ipynb  quick_start.py
python/tests/: conftest.py  test_backtest.py  test_backtest_edge.py  test_cal_trade_price.py  test_cal_yearly_days.py  test_compare_with_czsc_script.py  test_compare_yearly_return_with_vista_script.py  test_daily_performance.py  test_df_convert.py  test_edge_cases.py  test_generate_backtest_report.py  test_imports.py  test_input_paths.py  test_is_good_strategy.py  test_key_trades_merge.py  test_log_strategy_info.py  test_metrics_correctness.py  test_perf_compare_real_data_script.py  test_plotting.py  test_result.py  test_rolling_daily_performance.py  test_serialization.py  test_stats_order_and_segment_params.py  test_weights_simple_ensemble.py  test_yearly_return.py
python/wbt/: __init__.py  _df_convert.py  _wbt.pyi  backtest.py  mock.py  result.py  serialization.py  top_drawdowns.py
python/wbt/plotting/: __init__.py  _common.py  overview.py  returns.py  risk.py  tables.py  trades.py
python/wbt/report/: __init__.py  _generator.py  _html_tables.py  _plot_backtest.py  html_builder.py
python/wbt/utils/: __init__.py  cal_trade_price.py  cal_yearly_days.py  log_strategy_info.py  rolling_daily_performance.py  weights_simple_ensemble.py
src/: lib.rs  python.rs
src/core/: backtest.rs  backtest_result_wire.rs  cal_yearly_days.rs  daily_performance.rs  errors.rs  evaluate_pairs.rs  is_good_strategy.rs  key_trades.rs  mod.rs  native_engine.rs  period_win_rates.rs  report.rs  rolling_daily_performance.rs  top_drawdowns.rs  trade_dir.rs  utils.rs  yearly_return.rs
tests/: test_alignment.py
tests/fixtures/: backtest_result.msgpack
