[package]
name = "wbt"
version = "0.1.1"
edition = "2024"
description = "Weight-based backtesting engine for quantitative trading"
license = "MIT"
repository = "https://github.com/zengbin93/wbt"
homepage = "https://github.com/zengbin93/wbt"
documentation = "https://github.com/zengbin93/wbt#readme"
readme = "README.md"
keywords = ["backtesting", "quantitative", "trading", "finance"]
categories = ["finance", "science"]

[lib]
name = "wbt"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
polars = { version = "0.46", default-features = false, features = ["ipc", "lazy", "dtype-datetime", "dtype-date", "round_series", "cov", "abs", "serde", "strings"] }
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26"
strum_macros = "0.26"
hashbrown = "0.15"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
