[package]
name = "wbt"
version = "0.5.0"
edition = "2024"
description = "Weight-based backtesting engine for quantitative trading"
license = "MIT"
repository = "https://github.com/zengbin93/wbt"
homepage = "https://github.com/zengbin93/wbt"
documentation = "https://github.com/zengbin93/wbt#readme"
readme = "README.md"
keywords = ["backtesting", "quantitative", "trading", "finance"]
categories = ["finance", "science"]

[lib]
name = "wbt"
crate-type = ["cdylib", "lib"]

[features]
default = []
python = ["dep:numpy", "dep:pyo3", "dep:pyo3-log"]

[dependencies]
pyo3 = { version = "0.28", optional = true, features = ["extension-module", "abi3-py310", "generate-import-lib"] }
numpy = { version = "0.28", optional = true }
polars = { version = "0.53", default-features = false, features = ["ipc", "lazy", "dtype-datetime", "dtype-date", "round_series", "cov", "abs", "serde", "strings", "parquet", "csv"] }
rayon = "1.12"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.28"
strum_macros = "0.28"
hashbrown = "0.17"
log = "0.4"
pyo3-log = { version = "0.13", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
