[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wbt"
dynamic = ["version"]
description = "Weight-based backtesting engine for quantitative trading"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["pandas", "pyarrow", "numpy"]

[project.urls]
Homepage = "https://github.com/zengbin93/wbt"
Repository = "https://github.com/zengbin93/wbt"
Documentation = "https://github.com/zengbin93/wbt#readme"

[tool.maturin]
python-source = "python"
module-name = "wbt._wbt"
features = []
