[package]
name = "wbt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { workspace = true, features = ["lazy", "dtype-datetime", "dtype-date", "round_series", "pearson_corr"] }
rayon = "1.10"
chrono = "0.4"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26"
strum_macros = "0.26"
hashbrown = "0.15"
